Refactor AlgorithmServiceImpl: simplify string checks, enhance stream output, and clean up unused imports